fix relative import paths

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursor UI Clone</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="header-container">
             <a href="/" class="logo">
-                <img src="/assets/logos/cursor-logo-icon.png" alt="Cursor logo" width="23px">
-                <img src="assets/logos/cursor-logo-text.svg" alt="CURSOR" width="70px">
+                <img src="./assets/logos/cursor-logo-icon.png" alt="Cursor logo" width="23px">
+                <img src="./assets/logos/cursor-logo-text.svg" alt="CURSOR" width="70px">
             </a>
             <nav>
                 <ul>
