Added hero section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 
 <body>
+    <!-- This is the header section -->
     <header class="header">
         <div class="header-container">
-            <a href="/" class="logo">
-                <img src="./assets/logos/cursor-logo-icon.png" alt="Cursor logo" width="23px">
+            <a href="" class="logo">
+                <!-- <img src="./assets/logos/cursor-logo-icon.png" alt="Cursor logo" width="23px"> -->
+                <!-- Initially i used a image for logo but now i replaced it with a video, the logo animation is visible when we click it -->
+                <video src="./assets/logos/logo-animated-dark.mp4" width="22px" autoplay></video>
                 <img src="./assets/logos/cursor-logo-text.svg" alt="CURSOR" width="70px">
             </a>
             <nav>
@@ -27,8 +30,26 @@
                 <a href="/" class="btn-sn">Sign in</a>
                 <a href="/" class="btn-dl">Download</a>
             </div>
-        </header>
-    </div>
+    </header>
+
+    <!-- Now this is main section -->
+    <main>
+        <section class=" main-sections section-1">
+            <div class="hero-section">
+                <h1>Built to make you extraordinarily productive, Cursor is the best way to code with AI.</h1>
+                <a href="/" class="cta-btn">Download for macOS ⤓</a>
+            </div>
+            <div class="bg-1">
+                <div class="editor editor-main">
+                    <img src="assets/images/code-editor-s1-main.png" alt="">
+                </div>
+                <div class="editor editor-float">
+                    <img src="assets/images/code-editor-s1-float.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class=" main-sections section-2"></section>
+    </main>
 </body>
 
 </html>
