--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header class="header">
         <div class="header-container">
             <a href="" class="logo">
-                <!-- <img src="./assets/logos/cursor-logo-icon.png" alt="Cursor logo" width="23px"> -->
+                <!-- <img src="./assets/cursor-logos/cursor-logo-icon.png" alt="Cursor logo" width="23px"> -->
                 <!-- Initially i used a image for logo but now i replaced it with a video, the logo animation is visible when we click it -->
-                <video src="./assets/logos/logo-animated-dark.mp4" width="22px" autoplay></video>
-                <img src="./assets/logos/cursor-logo-text.svg" alt="CURSOR" width="70px">
+                <video src="./assets/cursor-logos/logo-animated-dark.mp4" width="22px" autoplay></video>
+                <img src="./assets/cursor-logos/cursor-logo-text.svg" alt="CURSOR" width="70px">
             </a>
             <nav>
                 <ul>
@@ -34,7 +34,7 @@
 
     <!-- Now this is main section -->
     <main>
-        <section class=" main-sections section-1">
+        <section class="main-sections section-1">
             <div class="hero-section">
                 <h1>Built to make you extraordinarily productive, Cursor is the best way to code with AI.</h1>
                 <a href="/" class="cta-btn">Download for macOS ⤓</a>
@@ -48,7 +48,55 @@
                 </div>
             </div>
         </section>
-        <section class=" main-sections section-2"></section>
+        <section class="main-sections section-2">
+            <!-- <div class="stack"> -->
+            <p>Trusted every day by millions of professional developers.</p>
+            <div class="brand-cards">
+                <div class="brand-card">
+                    <img src="assets/brand-logos/stripe.svg" alt="">
+                </div>
+                <div class="brand-card">
+                    <img src="assets/brand-logos/openai.svg" alt="">
+                </div>
+                <div class="brand-card">
+                    <img src="assets/brand-logos/linear.svg" alt="">
+                </div>
+                <div class="brand-card">
+                    <img src="assets/brand-logos/datadog.svg" alt="">
+                </div>
+                <div class="brand-card">
+                    <img src="assets/brand-logos/nvidia.svg" alt="">
+                </div>
+                <div class="brand-card">
+                    <img src="assets/brand-logos/figma.svg" alt="">
+                </div>
+                <div class="brand-card">
+                    <img src="assets/brand-logos/ramp.svg" alt="">
+                </div>
+                <div class="brand-card">
+                    <img src="assets/brand-logos/adobe.svg" alt="">
+                </div>
+            </div>
+            <!-- </div> -->
+        </section>
+
+        <section class="main-sections section-3">
+            <div class="section-3-container">
+                <div class="sec-3-left">
+                    <div class="sec-3-content">
+                        <h3>Agent turns ideas into code</h3>
+                        <p>A human-AI programmer, orders of magnitude more effective than any developer alone.</p>
+                        <div>Learn about Agent →</div>
+                    </div>
+                </div>
+                <div class="sec-3-right">
+                    <div class="editor editor-3">
+                        <img src="assets/images/code-editor-s3.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
