Completed upto frontier cards

--- a/index.html
+++ b/index.html
@@ -79,24 +79,211 @@
             </div>
             <!-- </div> -->
         </section>
-
         <section class="main-sections section-3">
-            <div class="section-3-container">
-                <div class="sec-3-left">
-                    <div class="sec-3-content">
-                        <h3>Agent turns ideas into code</h3>
-                        <p>A human-AI programmer, orders of magnitude more effective than any developer alone.</p>
-                        <div>Learn about Agent →</div>
+            <section class="section-3-1">
+                <div class="section-3-1-container">
+                    <div class="sec-3-1-left">
+                        <div class="sec-3-1-content">
+                            <h3>Agent turns ideas into code</h3>
+                            <p>A human-AI programmer, orders of magnitude more effective than any developer alone.</p>
+                            <div>Learn about Agent →</div>
+                        </div>
+                    </div>
+                    <div class="sec-3-1-right">
+                        <div class="editor editor-3-1">
+                            <img src="assets/images/code-editor-s3-1.png" alt="">
+                        </div>
                     </div>
                 </div>
-                <div class="sec-3-right">
-                    <div class="editor editor-3">
-                        <img src="assets/images/code-editor-s3.png" alt="">
+            </section>
+            <section class="section-3-2">
+                <div class="section-3-2-container">
+                    <div class="sec-3-2-left">
+                        <div class="editor editor-3-2">
+                            <img src="assets/images/code-editor-s3-2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="sec-3-2-right">
+                        <div class="sec-3-2-content">
+                            <h3>Magically accurate autocomplete</h3>
+                            <p>Our custom Tab model predicts your next action with striking speed and precision.</p>
+                            <div>Learn about Tab →</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="section-3-3">
+                <div class="section-3-3-container">
+                    <div class="sec-3-3-left">
+                        <div class="sec-3-3-content">
+                            <h3>Everywhere software gets built</h3>
+                            <p>Cursor is in GitHub reviewing your PRs, a teammate in Slack, and anywhere else you work.
+                            </p>
+                            <div>Learn about Cursor's ecosystem →</div>
+                        </div>
+                    </div>
+                    <div class="sec-3-3-right">
+                        <div class="editor .editor-3-3 editor-3-31">
+                            <img src="assets/images/code-editor-s3-31.png" alt="">
+                        </div>
+                        <div class="editor .editor-3-3 editor-3-32">
+                            <img src="assets/images/code-editor-s3-32.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <section class="main-sections section-4">
+            <div class="testimonials">
+                <div class="testimonials-heading">
+                    <h2>The new way to build software.</h2>
+                </div>
+                <div class="testimonial-cards">
+                    <div class="tml-card">
+                        <div class="quote-container">
+                            <p>It was night and day from one batch to another, adoption went from single digits to over
+                                80%. It just spread like wildfire, all the best builders were using Cursor.</p>
+                        </div>
+                        <div class="quote-author-container">
+                            <div class="author-image">
+                                <img src="assets/avatars/diana-hu-avatar.webp" alt="">
+                            </div>
+                            <div class="author-details">
+                                <h2>Diana Hu</h2>
+                                <p>General Partner, Y Combinator</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tml-card">
+                        <div class="quote-container">
+                            <p>The most useful AI tool that I currently pay for, hands down, is Cursor. It's fast,
+                                autocompletes when and where you need it to, handles brackets properly, sensible
+                                keyboard shortcuts, bring-your-own-model... everything is well put together.</p>
+                        </div>
+                        <div class="quote-author-container">
+                            <div class="author-image">
+                                <img src="assets/avatars/shadcn-avatar.webp" alt="">
+                            </div>
+                            <div class="author-details">
+                                <h2>shadcn</h2>
+                                <p>Creator of shadcn/ui</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tml-card">
+                        <div class="quote-container">
+                            <p>The best LLM applications have an autonomy slider: you control how much independence to
+                                give the AI. In Cursor, you can do Tab completion, Cmd+K for targeted edits, or you can
+                                let it rip with the full autonomy agentic version.</p>
+                        </div>
+                        <div class="quote-author-container">
+                            <div class="author-image">
+                                <img src="assets/avatars/andrej-karpathy-avatar.webp" alt="">
+                            </div>
+                            <div class="author-details">
+                                <h2>Andrej Karpathy</h2>
+                                <p>CEO, Eureka Labs</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tml-card">
+                        <div class="quote-container">
+                            <p>Cursor quickly grew from hundreds to thousands of extremely enthusiastic Stripe
+                                employees. We spend more on R&D and software creation than any other undertaking, and
+                                there's significant economic outcomes when making that process more efficient and
+                                productive.</p>
+                        </div>
+                        <div class="quote-author-container">
+                            <div class="author-image">
+                                <img src="assets/avatars/patrick-collison-avatar.webp" alt="">
+                            </div>
+                            <div class="author-details">
+                                <h2>Patrick Collison</h2>
+                                <p>Co‑Founder & CEO, Stripe</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tml-card">
+                        <div class="quote-container">
+                            <p>It's official.<br>
+                                <br>
+                                I hate vibe coding.<br>
+                                I love Cursor tab coding.<br>
+                                <br>
+                                It's wild.
+                            </p>
+                        </div>
+                        <div class="quote-author-container">
+                            <div class="author-image">
+                                <img src="assets/avatars/theprimeagen-avatar.webp" alt="">
+                            </div>
+                            <div class="author-details">
+                                <h2>ThePrimeagen</h2>
+                                <p>@ThePrimeagen</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tml-card">
+                        <div class="quote-container">
+                            <p>It's definitely becoming more fun to be a programmer. It's less about digging through
+                                pages and more about what you want to happen. We are at the 1% of what's possible, and
+                                it's in interactive experiences like Cursor where models like GPT-5 shine brightest.</p>
+                        </div>
+                        <div class="quote-author-container">
+                            <div class="author-image">
+                                <img src="assets/avatars/greg-brockman-avatar.webp" alt="">
+                            </div>
+                            <div class="author-details">
+                                <h2>Greg Brockman</h2>
+                                <p>President, OpenAI</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="main-sections section-5">
+            <div class="frontier-section">
+                <div class="frontier-section-heading">
+                    <h2>Stay on the frontier</h2>
+                </div>
+                <div class="frontier-section-cards">
+                    <div class="frontier-card">
+                        <div class="frontier-card-header">
+                            <h3>Access the best models</h3>
+                            <p>Choose between every cutting-edge model from OpenAI, Anthropic, Gemini, and xAI.</p>
+                            <div>Explore models ↗</div>
+                        </div>
+                        <div class="frontier-card-1-body">
+                            <img src="assets/images/frontier-photo-1.png" alt="">
+                        </div>
+                    </div>
 
+                    <div class="frontier-card">
+                        <div class="frontier-card-header">
+                            <h3>Complete codebase understanding</h3>
+                            <p>Cursor learns how your codebase works, no matter the scale or complexity.</p>
+                            <div>Learn about semantic search ↗</div>
+                        </div>
+                        <div class="frontier-card-2-body">
+                            <img src="assets/images/frontier-photo-2.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="frontier-card">
+                        <div class="frontier-card-header">
+                            <h3>Develop enduring software</h3>
+                            <p>Trusted by over half of the Fortune 500 to accelerate development, securely and at scale.</p>
+                            <div>Explore enterprise →</div>
+                        </div>
+                        <div class="frontier-card-3-body">
+                            <img src="assets/images/frontier-photo-3.webp" alt="">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
