Finished upto footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
             <nav>
                 <ul>
-                    <li><a href="/" class="nav-btn-1 nav-btn">Features</a></li>
+                    <li><a href="/" class="nav-btn-1 nav-btn">Product</a></li>
                     <li><a href="/" class="nav-btn-2 nav-btn">Enterprise</a></li>
                     <li><a href="/" class="nav-btn-3 nav-btn">Pricing</a></li>
                     <li><a href="/" class="nav-btn-4 nav-btn">Resources</a></li>
@@ -333,7 +333,154 @@
                 </div>
             </div>
         </section>
+        <section class="main-sections section-7">
+            <div class="section-7-container">
+                <div class="sec-7-left">
+                    <div class="sec-7-content">
+                        <h3>Cursor is an applied research team focused on building the future of software development.
+                        </h3>
+                        <div>Join us →</div>
+                    </div>
+                </div>
+                <div class="sec-7-right">
+                    <!-- <img src="assets/images/homepage-team-photo.webp" alt=""> -->
+                </div>
+            </div>
+        </section>
+        <section class="section-8">
+            <div class="section-8-container">
+                <div class="section-8-heading">
+                    <h3>Recent highlights</h3>
+                </div>
+                <div class="section-8-middle">
+                    <div class="highlights-cards">
+                        <div class="highlights-card">
+                            <div class="highlights-card-data">
+                                <div class="highlights-card-content">
+                                    <h3>Towards self-driving codebases</h3>
+                                    <p>We're making a part of our multi-agent research harness available to try today in
+                                        preview.</p>
+                                </div>
+                                <div class="highlights-card-info">Research · Feb 5, 2026</div>
+                            </div>
+                        </div>
+                        <div class="highlights-card">
+                            <div class="highlights-card-data">
+                                <div class="highlights-card-content">
+                                    <h3>Salesforce ships higher-quality code across 20,000 developers with Cursor</h3>
+                                    <p>Over 90% of developers at Salesforce now use Cursor, driving double-digit
+                                        improvements in cycle time, PR velocity, and code quality.</p>
+                                </div>
+                                <div class="highlights-card-info">Customers · Jan 21, 2026</div>
+                            </div>
+                        </div>
+                        <div class="highlights-card">
+                            <div class="highlights-card-data">
+                                <div class="highlights-card-content">
+                                    <h3>Best practices for coding with agents</h3>
+                                    <p>A comprehensive guide to working with coding agents, from starting with plans to
+                                        managing context, customizing workflows, and reviewing code.</p>
+                                </div>
+                                <div class="highlights-card-info">Product · Jan 9, 2026</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="highlights-cta">View more posts →</div>
+                </div>
+            </div>
+        </section>
+        <section class="section-9">
+            <div class="section-9-container">
+                <h2>Try Cursor now.</h2>
+            </div>
+            <div class="section-9-cta">
+                <a href="">Download for macOS ⤓</a>
+            </div>
+        </section>
     </main>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-grid">
+                <div class="footer-grid-item">
+                    <h3>Product</h3>
+                    <ul>
+                        <li><a href="">Agents</a></li>
+                        <li><a href="">Enterprise</a></li>
+                        <li><a href="">Code Review</a></li>
+                        <li><a href="">Tab</a></li>
+                        <li><a href="">CLI</a></li>
+                        <li><a href="">Cloud Agents</a></li>
+                        <li><a href="">Pricing</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-grid-item">
+                    <h3>Resources</h3>
+                    <ul>
+                        <li><a href="">Download</a></li>
+                        <li><a href="">Changelog</a></li>
+                        <li><a href="">Docs</a></li>
+                        <li><a href="">Forum</a></li>
+                        <li><a href="">Status</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-grid-item">
+                    <h3>Company</h3>
+                    <ul>
+                        <li><a href="">Careers</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Community</a></li>
+                        <li><a href="">Students</a></li>
+                        <li><a href="">Brand</a></li>
+                        <li><a href="">Anysphere</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-grid-item">
+                    <h3>Legal</h3>
+                    <ul>
+                        <li><a href="">Terms of Service</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Data Use</a></li>
+                        <li><a href="">Security</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-grid-item">
+                    <h3>Connect</h3>
+                    <ul>
+                        <li><a href="">X</a></li>
+                        <li><a href="">LinkedIn</a></li>
+                        <li><a href="">YouTube</a></li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="footer-info-bar">
+                <div class="footer-info-left">
+                    <p>© 2026 Anysphere, Inc.</p>
+                    <p>🛡 SOC 2 Certified</p>
+                </div>
+                <div class="footer-info-right">
+                    <div class="theme-icons">
+                        <span class="theme-icon-option">🖥</span>
+                        <span class="theme-icon-option">☉</span>
+                        <span class="theme-icon-option icon-dark">☾</span>
+                    </div>
+                    <div class="lang-options">
+                        <span class="">🌐</span>
+                        <span class="">English</span>
+                        <span class="">
+                            <svg width="12" height="12" viewBox="0 0 20 20">
+                                <path d="M5 7l5 5 5-5" fill="none" stroke="currentColor" stroke-width="2" />
+                            </svg>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
