Made images non draggable

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header class="header">
         <div class="header-container">
             <a href="" class="logo">
-                <!-- <img src="./assets/cursor-logos/cursor-logo-icon.png" alt="Cursor logo" width="23px"> -->
+                <!-- <img draggable="false" src="./assets/cursor-logos/cursor-logo-icon.png" alt="Cursor logo" width="23px"> -->
                 <!-- Initially i used a image for logo but now i replaced it with a video, the logo animation is visible when we click it -->
                 <video src="./assets/cursor-logos/logo-animated-dark.mp4" width="22px" autoplay></video>
-                <img src="./assets/cursor-logos/cursor-logo-text.svg" alt="CURSOR" width="70px">
+                <img draggable="false" src="./assets/cursor-logos/cursor-logo-text.svg" alt="CURSOR" width="70px">
             </a>
             <nav>
                 <ul>
@@ -41,10 +41,10 @@
             </div>
             <div class="bg-1">
                 <div class="editor editor-main">
-                    <img src="assets/images/code-editor-s1-main.png" alt="">
+                    <img draggable="false" src="assets/images/code-editor-s1-main.png" alt="">
                 </div>
                 <div class="editor editor-float">
-                    <img src="assets/images/code-editor-s1-float.png" alt="">
+                    <img draggable="false" src="assets/images/code-editor-s1-float.png" alt="">
                 </div>
             </div>
         </section>
@@ -53,28 +53,28 @@
             <p>Trusted every day by millions of professional developers.</p>
             <div class="brand-cards">
                 <div class="brand-card">
-                    <img src="assets/brand-logos/stripe.svg" alt="">
+                    <img draggable="false" src="assets/brand-logos/stripe.svg" alt="">
                 </div>
                 <div class="brand-card">
-                    <img src="assets/brand-logos/openai.svg" alt="">
+                    <img draggable="false" src="assets/brand-logos/openai.svg" alt="">
                 </div>
                 <div class="brand-card">
-                    <img src="assets/brand-logos/linear.svg" alt="">
+                    <img draggable="false" src="assets/brand-logos/linear.svg" alt="">
                 </div>
                 <div class="brand-card">
-                    <img src="assets/brand-logos/datadog.svg" alt="">
+                    <img draggable="false" src="assets/brand-logos/datadog.svg" alt="">
                 </div>
                 <div class="brand-card">
-                    <img src="assets/brand-logos/nvidia.svg" alt="">
+                    <img draggable="false" src="assets/brand-logos/nvidia.svg" alt="">
                 </div>
                 <div class="brand-card">
-                    <img src="assets/brand-logos/figma.svg" alt="">
+                    <img draggable="false" src="assets/brand-logos/figma.svg" alt="">
                 </div>
                 <div class="brand-card">
-                    <img src="assets/brand-logos/ramp.svg" alt="">
+                    <img draggable="false" src="assets/brand-logos/ramp.svg" alt="">
                 </div>
                 <div class="brand-card">
-                    <img src="assets/brand-logos/adobe.svg" alt="">
+                    <img draggable="false" src="assets/brand-logos/adobe.svg" alt="">
                 </div>
             </div>
             <!-- </div> -->
@@ -91,7 +91,7 @@
                     </div>
                     <div class="sec-3-1-right">
                         <div class="editor editor-3-1">
-                            <img src="assets/images/code-editor-s3-1.png" alt="">
+                            <img draggable="false" src="assets/images/code-editor-s3-1.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                 <div class="section-3-2-container">
                     <div class="sec-3-2-left">
                         <div class="editor editor-3-2">
-                            <img src="assets/images/code-editor-s3-2.png" alt="">
+                            <img draggable="false" src="assets/images/code-editor-s3-2.png" alt="">
                         </div>
                     </div>
                     <div class="sec-3-2-right">
@@ -124,10 +124,10 @@
                     </div>
                     <div class="sec-3-3-right">
                         <div class="editor .editor-3-3 editor-3-31">
-                            <img src="assets/images/code-editor-s3-31.png" alt="">
+                            <img draggable="false" src="assets/images/code-editor-s3-31.png" alt="">
                         </div>
                         <div class="editor .editor-3-3 editor-3-32">
-                            <img src="assets/images/code-editor-s3-32.png" alt="">
+                            <img draggable="false" src="assets/images/code-editor-s3-32.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
-                                <img src="assets/avatars/diana-hu-avatar.webp" alt="">
+                                <img draggable="false" src="assets/avatars/diana-hu-avatar.webp" alt="">
                             </div>
                             <div class="author-details">
                                 <h2>Diana Hu</h2>
@@ -162,7 +162,7 @@
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
-                                <img src="assets/avatars/shadcn-avatar.webp" alt="">
+                                <img draggable="false" src="assets/avatars/shadcn-avatar.webp" alt="">
                             </div>
                             <div class="author-details">
                                 <h2>shadcn</h2>
@@ -178,7 +178,7 @@
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
-                                <img src="assets/avatars/andrej-karpathy-avatar.webp" alt="">
+                                <img draggable="false" src="assets/avatars/andrej-karpathy-avatar.webp" alt="">
                             </div>
                             <div class="author-details">
                                 <h2>Andrej Karpathy</h2>
@@ -195,7 +195,7 @@
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
-                                <img src="assets/avatars/patrick-collison-avatar.webp" alt="">
+                                <img draggable="false" src="assets/avatars/patrick-collison-avatar.webp" alt="">
                             </div>
                             <div class="author-details">
                                 <h2>Patrick Collison</h2>
@@ -215,7 +215,7 @@
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
-                                <img src="assets/avatars/theprimeagen-avatar.webp" alt="">
+                                <img draggable="false" src="assets/avatars/theprimeagen-avatar.webp" alt="">
                             </div>
                             <div class="author-details">
                                 <h2>ThePrimeagen</h2>
@@ -231,7 +231,7 @@
                         </div>
                         <div class="quote-author-container">
                             <div class="author-image">
-                                <img src="assets/avatars/greg-brockman-avatar.webp" alt="">
+                                <img draggable="false" src="assets/avatars/greg-brockman-avatar.webp" alt="">
                             </div>
                             <div class="author-details">
                                 <h2>Greg Brockman</h2>
@@ -255,7 +255,7 @@
                             <div>Explore models ↗</div>
                         </div>
                         <div class="frontier-card-1-body">
-                            <img src="assets/images/frontier-photo-1.png" alt="">
+                            <img draggable="false" src="assets/images/frontier-photo-1.png" alt="">
                         </div>
                     </div>
 
@@ -266,7 +266,7 @@
                             <div>Learn about semantic search ↗</div>
                         </div>
                         <div class="frontier-card-2-body">
-                            <img src="assets/images/frontier-photo-2.png" alt="">
+                            <img draggable="false" src="assets/images/frontier-photo-2.png" alt="">
                         </div>
                     </div>
 
@@ -278,7 +278,7 @@
                             <div>Explore enterprise →</div>
                         </div>
                         <div class="frontier-card-3-body">
-                            <img src="assets/images/frontier-photo-3.webp" alt="">
+                            <img draggable="false" src="assets/images/frontier-photo-3.webp" alt="">
                         </div>
                     </div>
 
@@ -343,7 +343,7 @@
                     </div>
                 </div>
                 <div class="sec-7-right">
-                    <!-- <img src="assets/images/homepage-team-photo.webp" alt=""> -->
+                    <!-- <img draggable="false" src="assets/images/homepage-team-photo.webp" alt=""> -->
                 </div>
             </div>
         </section>
